Bug 1543398 - Don't pass unknown descriptors to Servo. r=heycam

Differential Revision: https://phabricator.services.mozilla.com/D26914